--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "multer": "^1.4.2",
     "mysql2": "^1.6.5",
     "pug": "^3.0.1",
-    "sequelize": "^5.21.12",
+    "sequelize": "^6.6.2",
+    "socket.io": "^4.0.1",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
     "uuid": "^7.0.2",
@@ -48,6 +49,7 @@
     "@types/node": "^14.14.37",
     "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
+    "@types/validator": "^13.1.3",
     "@types/webpack-env": "^1.16.0",
     "babel-loader": "^8.1.0",
     "eslint": "^6.8.0",
