--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/express": "^4.17.11",
     "@types/helmet": "^4.0.0",
     "@types/http-errors": "^1.8.0",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.37",
     "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
