--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "mediasoup": "^3.7.1",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "multer": "^1.4.2",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
+    "@types/bcrypt": "^3.0.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
