--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.4.2",
     "mysql2": "^1.6.5",
     "pug": "^3.0.1",
+    "redis": "^3.1.2",
     "sequelize": "^6.6.2",
     "socket.io": "^4.0.1",
     "swagger-jsdoc": "^3.5.0",
