--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "crypto-random-string": "^3.2.0",
+    "dayjs": "^1.10.6",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.0",
@@ -51,6 +52,7 @@
     "@types/http-errors": "^1.8.0",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.37",
+    "@types/redis": "^2.8.31",
     "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.3",
@@ -59,6 +61,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.1",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
